View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0027115 | Community | OCCT:Configuration | public | 2016-01-26 11:24 | 2018-11-11 12:01 |
Reporter | AlexanderZashivalov | Assigned To | bugmaster | ||
Priority | low | Severity | feature | ||
Status | closed | Resolution | fixed | ||
Platform | Windows | OS | VC++ 2015 | ||
Product Version | 7.0.0 | ||||
Target Version | 7.4.0 | Fixed in Version | 7.4.0 | ||
Summary | 0027115: Configuration, genproj - add headers to generated MS VS projects | ||||
Description | Projects for MS VS generated by genproj script don't have "Header files" section, only "Source files". It would be more convenient to have this section, also to allow IntelliSense to be more productive. | ||||
Steps To Reproduce | 1. Generate project files using genproj. 2. Open generated solution in MS VS. 3. Look at any project contents. | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR27115 has been created by kgv. SHA-1: a1851eed1b1702b8f61ae231010ae49c2f263799 Detailed log of new commits: Author: kgv Date: Fri Nov 2 17:55:03 2018 +0300 0027115: Configuration, genproj - add headers to generated MS VS projects Header files and non-compilable source files are now included within generated VS projects. genproj now generates DRAWEXE.rc. |
|
Patch is ready for review. |
|
No remarks, please integrate. Note that standard certification testing (even compilation) is not needed, since this patch does not affect standard CMake build pipeline. I have tested it to work on VS 2010 and 2015. |
|
Branch CR27115 has been updated by kgv. SHA-1: aa3874ad097a501c5ed372262e405faf009d741e Detailed log of new commits: Author: kgv Date: Wed Nov 7 12:23:48 2018 +0300 # fix compilation of WNT package on non-Windows targets Author: kgv Date: Tue Nov 6 19:42:22 2018 +0300 0030348: Shape Healing - ShapeFix_Wire::FixEdgeCurves() throws Standard_OutOfRange exception |
|
Branch CR27115_1 has been created by kgv. SHA-1: 094577fad025dca9af40dbf4d8f90802f18aec38 Detailed log of new commits: Author: kgv Date: Fri Nov 2 17:55:03 2018 +0300 0027115: Configuration, genproj - add headers to generated MS VS projects Header files and non-compilable source files are now included within generated VS projects. genproj now generates DRAWEXE.rc. |
|
Please use a corrected patch in branch CR27115_1. |
|
Branch CR27115_1 has been deleted by inv. SHA-1: 094577fad025dca9af40dbf4d8f90802f18aec38 |
|
Branch CR27115 has been deleted by inv. SHA-1: aa3874ad097a501c5ed372262e405faf009d741e |
occt: master cf4bee7c 2018-11-02 14:55:03 Committer: bugmaster Details Diff |
0027115: Configuration, genproj - add headers to generated MS VS projects Header files and non-compilable source files are now included within generated VS projects. genproj now generates DRAWEXE.rc. |
Affected Issues 0027115 |
|
mod - adm/genproj.tcl | Diff File | ||
mod - adm/templates/template.vc10x | Diff File | ||
mod - src/Font/FILES | Diff File | ||
mod - src/WNT/WNT_WClass.cxx | Diff File | ||
mod - src/WNT/WNT_Window.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2016-01-26 11:24 | AlexanderZashivalov | New Issue | |
2016-01-26 11:24 | AlexanderZashivalov | Assigned To | => kgv |
2016-01-26 20:10 | kgv | Relationship added | related to 0022827 |
2016-04-14 14:13 | kgv | Priority | normal => low |
2016-04-14 14:13 | kgv | Category | OCCT:Coding => OCCT:Configuration |
2016-04-14 14:13 | kgv | Summary | Add headers to MS VS projects generated by genproj => Configuration - add headers to MS VS projects generated by genproj |
2016-07-30 19:32 | kgv | Assigned To | kgv => bugmaster |
2018-11-02 17:52 | kgv | Summary | Configuration - add headers to MS VS projects generated by genproj => Configuration, genproj - add headers to generated MS VS projects |
2018-11-02 17:57 | git | Note Added: 0080654 | |
2018-11-02 17:58 | kgv | Note Added: 0080655 | |
2018-11-02 17:58 | kgv | Assigned To | bugmaster => abv |
2018-11-02 17:58 | kgv | Status | new => resolved |
2018-11-02 17:58 | kgv | Target Version | => 7.4.0 |
2018-11-06 14:19 | abv | Note Added: 0080743 | |
2018-11-06 14:19 | abv | Assigned To | abv => bugmaster |
2018-11-06 14:19 | abv | Status | resolved => reviewed |
2018-11-06 14:29 | bugmaster | Status | reviewed => tested |
2018-11-07 12:25 | git | Note Added: 0080815 | |
2018-11-07 12:27 | git | Note Added: 0080816 | |
2018-11-07 12:28 | kgv | Note Added: 0080817 | |
2018-11-09 15:42 | bugmaster | Test case number | => Not needed |
2018-11-11 11:52 | bugmaster | Changeset attached | => occt master cf4bee7c |
2018-11-11 11:52 | bugmaster | Status | tested => verified |
2018-11-11 11:52 | bugmaster | Resolution | open => fixed |
2018-11-11 12:01 | git | Note Added: 0081037 | |
2018-11-11 12:01 | git | Note Added: 0081038 |