0027115: Configuration, genproj - add headers to generated MS VS projects

Header files and non-compilable source files are now included within generated VS projects.
genproj now generates DRAWEXE.rc.